# devils-c

./: .gitignore  README.md
src/: CMakeLists.txt
src/core/: chat_client.c  chat_server.c  client.c  msgex.c  server.c
src/devils/: CMakeLists.txt  devils_callbacks.c  devils_compress.c  devils_host.c  devils_list.c  devils_packet.c  devils_peer.c  devils_protocol.c
src/devils/include/: devils.h  devils_callbacks.h  devils_list.h  devils_protocol.h  devils_time.h  devils_types.h  devils_utility.h
src/devils/unix/: unix.c  unix.h
src/devils/win32/: win32.c  win32.h
